Modificación del archivo index.html

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     </div>
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
     <div>
-      <label for="" id="compra">Compra de: $ </label>
+      <label for="" id="compra">Compra del: $ </label>
     </div>
     <div>
       <div>
